force-app/main/default/objects/Booking_Seat__c/Booking_Seat__c.object-meta.xml
<CustomObject>
    <label>Booking Seat</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Booking Seat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Seats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>