force-app/main/default/objects/Booking_Seat__c/fields/Reassigned_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned  Aircraft</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Booking Seats</relationshipLabel>
    <relationshipName>Booking_Seats</relationshipName>
    <type>Lookup</type>
</CustomField>